--- a/DayZ TraderPlus Editor/DayZ TraderPlus Editor.csproj
+++ b/DayZ TraderPlus Editor/DayZ TraderPlus Editor.csproj
@@ -78,6 +78,12 @@
     <Compile Include="Models\TraderConfigRoot.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RenameCategoryForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RenameCategoryForm.Designer.cs">
+      <DependentUpon>RenameCategoryForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AddNewCategoryForm.resx">
       <DependentUpon>AddNewCategoryForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -99,6 +105,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="RenameCategoryForm.resx">
+      <DependentUpon>RenameCategoryForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
